# ETL-dados-livros-lambda-aws

./: .gitignore  MakeFile  Makefile  README.md  handler.py  main.py  pyproject.toml  serverless.yml
.github/workflows/: serverless-publish.yml
