[tool.poetry]
name = "web-scraping-dados"
version = "1"
description = "Lambda que coleta os dados de livros e insere diareamente no data lake"
authors = ["GabrielMeelo97 <gabrielmelo_@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.4.2"
boto3 = "^1.23.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
